     did not print black ink has been fixed.

  3) A problem with the Postscript driver always printing in grayscale
     has been fixed.  This problem was apparently introduced in 5.1.1.

  4) The Postscript driver now includes all device settings in the
     output.

  5) The range of sizes for printing custom CD's has been extended
     down to 65 mm in both the Epson and Canon drivers.


----------------

B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.1:

  1) New printers supported in this release:

     * Epson inkjet printers:

       Epson Picturemate Flash
       Epson Picturemate Pal
       Epson Picturemate Snap
       Epson Picturemate PM-200
       Epson Picturemate PM-210
       Epson Picturemate PM-240
       Epson Picturemate PM-250
       Epson Picturemate PM-280
       Epson Stylus C79+
       Epson Stylus C87+
       Epson Stylus Photo 1400
       Epson Stylus Photo 1410
       Epson Stylus Photo R230
       Epson Stylus Photo R350
       Epson Stylus Photo R260
       Epson Stylus Photo R265
       Epson Stylus Photo R270
       Epson Stylus Photo R360
       Epson Stylus Photo R380
       Epson Stylus Photo R390
       Epson Stylus Photo RX560
       Epson Stylus Photo RX580
       Epson Stylus Photo RX640
       Epson PM A820
       Epson PM D870
       Epson PM G850
       Epson PM G4500

  2) Preliminary support for the following printers:

     * Epson inkjet printers:

       Epson Stylus Photo R240
       Epson Stylus Photo R245

  3) A minor border problem with the R800 and related printers has
     been fixed.  The standard bottom border is now slightly wider to
     eliminate the very bottom of the print from being chopped off.

  4) Some Canon printers have been renamed from "Multipass" to
     "Pixma".

  5) A build problem with the CUPS driver on some systems (in
     particular, OS X and any system where --disable-nls is used) has
     been fixed.

  6) The CUPS PPD files now use the correct UTF-8 encoding.
